Tried to redo the TD here, but all data should be Numbers...

--- a/Experimentation.ipynb
+++ b/Experimentation.ipynb
@@ -9,56 +9,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import csv"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def drawview(matrice):\n",
-    "    #matrice is like [column for x axis, column for y axis, column for data]\n",
+    "    #matrice is like [column of x values, column of y values]\n",
     "    x = matrice[:,0]\n",
     "    y = matrice[:,1]\n",
-    "    data = matrice[:,2]\n",
-    "    plt.scatter(x, y, c=data)\n",
+    "    plt.scatter(x, y)\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# drawview(np.array(np.random.rand(500,2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA = csv.reader(open('test.csv', 'r'), delimiter=',')\n",
+    "DATA = np.array(list(DATA))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('test.csv', delimiter=',')\n",
+    "df = df.rename(columns=lambda x: x.strip())\n",
+    "ef = pd.read_csv('sample_submission.csv', delimiter=',')\n",
+    "ef = ef.rename(columns=lambda x: x.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ncols = df.shape[1]\n",
+    "param = df.columns[1:]\n",
+    "price = ef.columns[1:]\n",
+    "X = df[param].to_numpy()\n",
+    "Y = ef[price].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get n and p values here\n",
+    "n, p = X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([['Id', 'MSSubClass', 'MSZoning', ..., 'YrSold', 'SaleType',\n",
-       "        'SaleCondition'],\n",
-       "       ['1461', '20', 'RH', ..., '2010', 'WD', 'Normal'],\n",
-       "       ['1462', '20', 'RL', ..., '2010', 'WD', 'Normal'],\n",
+       "array([[1, 20, 'RH', ..., 2010, 'WD', 'Normal'],\n",
+       "       [1, 20, 'RL', ..., 2010, 'WD', 'Normal'],\n",
+       "       [1, 60, 'RL', ..., 2010, 'WD', 'Normal'],\n",
        "       ...,\n",
-       "       ['2917', '20', 'RL', ..., '2006', 'WD', 'Abnorml'],\n",
-       "       ['2918', '85', 'RL', ..., '2006', 'WD', 'Normal'],\n",
-       "       ['2919', '60', 'RL', ..., '2006', 'WD', 'Normal']], dtype='<U13')"
+       "       [1, 20, 'RL', ..., 2006, 'WD', 'Abnorml'],\n",
+       "       [1, 85, 'RL', ..., 2006, 'WD', 'Normal'],\n",
+       "       [1, 60, 'RL', ..., 2006, 'WD', 'Normal']], dtype=object)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "DATA = csv.reader(open('test.csv', 'r'), delimiter=',')\n",
-    "DATA = np.array(list(DATA))\n"
+    "# add column with constant one to X here\n",
+    "one = np.ones( (n, 1), dtype=X.dtype)\n",
+    "X = np.hstack( [one, X] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"float\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_860/728019489.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# compute beta 9493in a numpy array here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbeta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"float\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "# compute beta 9493in a numpy array here\n",
+    "beta = np.linalg.inv(X.T @ X) @ X.T @ Y"
    ]
   }
  ],
