--- a/Experimentation.ipynb
+++ b/Experimentation.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gaspa/.local/lib/python3.10/site-packages/matplotlib/projections/__init__.py:63: UserWarning: Unable to import Axes3D. This may be due to multiple versions of Matplotlib being installed (e.g. as a system package and as a pip package). As a result, the 3D projection is not available.\n",
+      "  warnings.warn(\"Unable to import Axes3D. This may be due to multiple versions of \"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -20,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,17 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATA = csv.reader(open('test.csv', 'r'), delimiter=',')\n",
-    "DATA = np.array(list(DATA))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,20 +64,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fix_nonintdata (df):\n",
+    "    # this transform the data that are not numbers into numbers\n",
+    "    # first we create a cursor that scan every column\n",
+    "    for column in df.columns:\n",
+    "        # then we check if the column is not a number\n",
+    "        if df[column].dtype == 'object':\n",
+    "            # if it is not a number, we add every possible value to a dictionnary\n",
+    "            convert_dict = {}\n",
+    "            for i, value in enumerate(df[column].unique()):\n",
+    "                convert_dict[value] = i\n",
+    "            # then we replace the value by the corresponding number\n",
+    "            df[column] = df[column].map(convert_dict)\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Id  MSSubClass  MSZoning  LotFrontage  LotArea  Street  Alley  \\\n",
+      "0     1461          20         0         80.0    11622       0      0   \n",
+      "1     1462          20         1         81.0    14267       0      0   \n",
+      "2     1463          60         1         74.0    13830       0      0   \n",
+      "3     1464          60         1         78.0     9978       0      0   \n",
+      "4     1465         120         1         43.0     5005       0      0   \n",
+      "...    ...         ...       ...          ...      ...     ...    ...   \n",
+      "1454  2915         160         2         21.0     1936       0      0   \n",
+      "1455  2916         160         2         21.0     1894       0      0   \n",
+      "1456  2917          20         1        160.0    20000       0      0   \n",
+      "1457  2918          85         1         62.0    10441       0      0   \n",
+      "1458  2919          60         1         74.0     9627       0      0   \n",
+      "\n",
+      "      LotShape  LandContour  Utilities  ...  ScreenPorch  PoolArea  PoolQC  \\\n",
+      "0            0            0          0  ...          120         0       0   \n",
+      "1            1            0          0  ...            0         0       0   \n",
+      "2            1            0          0  ...            0         0       0   \n",
+      "3            1            0          0  ...            0         0       0   \n",
+      "4            1            1          0  ...          144         0       0   \n",
+      "...        ...          ...        ...  ...          ...       ...     ...   \n",
+      "1454         0            0          0  ...            0         0       0   \n",
+      "1455         0            0          0  ...            0         0       0   \n",
+      "1456         0            0          0  ...            0         0       0   \n",
+      "1457         0            0          0  ...            0         0       0   \n",
+      "1458         0            0          0  ...            0         0       0   \n",
+      "\n",
+      "      Fence  MiscFeature  MiscVal  MoSold  YrSold  SaleType  SaleCondition  \n",
+      "0         0            0        0       6    2010         0              0  \n",
+      "1         1            1    12500       6    2010         0              0  \n",
+      "2         0            0        0       3    2010         0              0  \n",
+      "3         1            0        0       6    2010         0              0  \n",
+      "4         1            0        0       1    2010         0              0  \n",
+      "...     ...          ...      ...     ...     ...       ...            ...  \n",
+      "1454      1            0        0       6    2006         0              0  \n",
+      "1455      1            0        0       4    2006         0              2  \n",
+      "1456      1            0        0       9    2006         0              2  \n",
+      "1457      0            2      700       7    2006         0              0  \n",
+      "1458      1            0        0      11    2006         0              0  \n",
+      "\n",
+      "[1459 rows x 80 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fix_nonintdata(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "ncols = df.shape[1]\n",
     "param = df.columns[1:]\n",
     "price = ef.columns[1:]\n",
-    "X = df[param].to_numpy()\n",
+    "X = fix_nonintdata(df[param]).to_numpy()\n",
     "Y = ef[price].to_numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,26 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 20, 'RH', ..., 2010, 'WD', 'Normal'],\n",
-       "       [1, 20, 'RL', ..., 2010, 'WD', 'Normal'],\n",
-       "       [1, 60, 'RL', ..., 2010, 'WD', 'Normal'],\n",
-       "       ...,\n",
-       "       [1, 20, 'RL', ..., 2006, 'WD', 'Abnorml'],\n",
-       "       [1, 85, 'RL', ..., 2006, 'WD', 'Normal'],\n",
-       "       [1, 60, 'RL', ..., 2006, 'WD', 'Normal']], dtype=object)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# add column with constant one to X here\n",
     "one = np.ones( (n, 1), dtype=X.dtype)\n",
@@ -116,21 +176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"float\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_860/728019489.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# compute beta 9493in a numpy array here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mbeta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"float\") to str"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# compute beta 9493in a numpy array here\n",
     "beta = np.linalg.inv(X.T @ X) @ X.T @ Y"
